[tool.poetry]
name = "wikipedia-cli-rupa"
version = "0.1.0"
description = "The Wikipedia command line interface"
authors = ["rdturbo <rupayan98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rdturbo/wikipedia-cli-rupa"
repository = "https://github.com/rdturbo/wikipedia-cli-rupa"
keywords = ["wikipedia"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
wikipedia = "wikipedia_cli_rupa.console:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
