[tool.poetry]
name = "wikipedia-cli-rupa"
version = "0.1.0"
description = "The Wikipedia command line interface"
authors = ["rdturbo <rupayan98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rdturbo/wikipedia-cli-rupa"
repository = "https://github.com/rdturbo/wikipedia-cli-rupa"
keywords = ["wikipedia"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
flake8 = "^5.0.4"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^5.0.4"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.8.23"
flake8-import-order = "^0.18.1"
safety = "^2.1.1"
mypy = "^0.971"

[tool.poetry.scripts]
wikipedia = "wikipedia_cli_rupa.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["wikipedia_cli_rupa"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
